@@ -1,3 +1,4 @@
+XX/08/19 (TRUST)  Bug fixed   : Add a check for extracted field using surface domain with not the good support
 XX/08/19 (TRUST)  Bug fixed   : Regression introduced in 1.7.7: using MED format post-processing during parallel calculation with empty zones crashed
 XX/08/19 (TRUST)  Portability : Fedora 30 and GNU compilers 9.0.1 supported
 -------------------------------------------------------------------------------------------------------
